# android

./: README.md
audio/app/: build.gradle
audiorecorder/: settings.gradle
audiorecorder/app/: build.gradle
camera/: build.gradle
camera/demo/: settings.gradle
camera/example/: settings.gradle
dvr/: android.keystore  debug.jks  settings.gradle
dvr/app/: build.gradle
dvr/storage/: build.gradle
flutter_amap/: README.md  pubspec.yaml
flutter_amap/lib/: main.dart  mapcontrol.dart  mapview.dart  naviview.dart
jetpack/: settings.gradle
jetpack/app/: build.gradle
jetpack_demo/: settings.gradle
jetpack_demo/app/: build.gradle
media_player/: settings.gradle
media_player/app/: build.gradle
media_player_demo/: settings.gradle
media_player_demo/app/: build.gradle
mediaplayer/: settings.gradle
mediaplayer/app/: build.gradle
my_activity/: settings.gradle
my_activity/app/: build.gradle  local.properties
my_native_service/: settings.gradle
my_native_service/app/: build.gradle
my_provider/: settings.gradle
my_provider/app/: build.gradle
my_receiver/: settings.gradle
my_receiver/app/: build.gradle
my_service/: settings.gradle
my_service/app/: build.gradle
native/: NativeExample.java  native_example_jni.h
native/native_example_jni/: native_example_jni.cc  native_example_jni.sln  native_example_jni.vcxproj  native_example_jni.vcxproj.filters
native_demo/: NativeDemo.h  NativeDemo.java  native_demo.lib
native_demo/native_demo/: native_demo.sln  native_demo.vcxproj  native_demo.vcxproj.filters
player/: settings.gradle
player/app/: build.gradle
progress_bar/: settings.gradle
progress_bar/app/: build.gradle
progressbar/: settings.gradle
progressbar/app/: build.gradle
startup_namer/lib/: main.dart
storage/: build.gradle
usb/: settings.gradle
usb/app/: build.gradle
usb_demo/: settings.gradle
voice_recognizer/: build.gradle
voice_recognizer/src/main/cpp/: CMakeLists.txt
voice_recognizer/src/main/cpp/inc/: vad_api_native.h
voice_recognizer/src/main/cpp/src/: vad_api_native.cc
wuw_sample_engine/: build.gradle
(+402 files in other folders)
